--- a/package.json
+++ b/package.json
@@ -8,40 +8,45 @@
     "build": "cross-env INIT_CWD=$PWD next build && cross-env NODE_OPTIONS='--experimental-json-modules' node ./scripts/postbuild.mjs",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
-    "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts"
+    "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts",
+    "prepare": "husky"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "14.0.3",
-    "@next/third-parties": "^15.1.5",
-    "@tailwindcss/forms": "^0.5.4",
-    "@tailwindcss/typography": "^0.5.9",
+    "@headlessui/react": "2.2.0",
+    "@next/bundle-analyzer": "15.1.4",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
     "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "^10.4.13",
-    "contentlayer": "0.3.4",
-    "esbuild": "0.18.11",
-    "github-slugger": "^1.4.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
+    "contentlayer2": "0.5.3",
+    "esbuild": "0.20.2",
+    "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.2",
+    "hast-util-from-html-isomorphic": "^2.0.0",
     "image-size": "1.0.0",
-    "next": "14.0.3",
-    "next-contentlayer": "0.3.4",
-    "next-themes": "^0.2.1",
-    "pliny": "0.1.6",
+    "next": "15.1.4",
+    "next-contentlayer2": "0.5.3",
+    "next-themes": "^0.3.0",
+    "pliny": "0.4.0",
     "postcss": "^8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "rc",
+    "react-dom": "rc",
     "react-icons": "^5.4.0",
     "reading-time": "1.5.0",
-    "rehype-autolink-headings": "^6.1.0",
-    "rehype-citation": "^1.0.2",
-    "rehype-katex": "^6.0.3",
-    "rehype-preset-minify": "6.0.0",
-    "rehype-prism-plus": "^1.6.0",
-    "rehype-slug": "^5.1.0",
-    "remark": "^14.0.2",
-    "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1",
-    "tailwindcss": "^3.3.3",
-    "unist-util-visit": "^4.1.0"
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-citation": "^2.0.0",
+    "rehype-katex": "^7.0.0",
+    "rehype-katex-notranslate": "^1.1.4",
+    "rehype-preset-minify": "7.0.0",
+    "rehype-prism-plus": "^2.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark": "^15.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-github-blockquote-alert": "^1.2.1",
+    "remark-math": "^6.0.0",
+    "tailwindcss": "^3.4.14",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
