--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@next/bundle-analyzer": "15.1.4",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
+    "@tsparticles/engine": "^3.8.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.0",
     "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "^10.4.13",
     "body-scroll-lock": "^4.0.0-beta.0",
