--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,12 @@
       "@/data/*": ["data/*"],
       "@/layouts/*": ["layouts/*"],
       "@/css/*": ["css/*"],
-      "contentlayer/generated": ["./.contentlayer/generated"]
+      "contentlayer/generated": ["./.contentlayer/generated"],
+      "@/types/*": ["types/*"],
+      "@/utils/*": ["utils/*"],
+      "@/servers/*": ["servers/*"],
+      "@/hooks/*": ["hooks/*"],
+      "@/constants/*": ["constants/*"]
     }
   }
 }
