--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "remark-gfm": "^4.0.0",
     "remark-github-blockquote-alert": "^1.2.1",
     "remark-math": "^6.0.0",
+    "swr": "^2.3.3",
     "tailwindcss": "^3.4.14",
     "unist-util-visit": "^5.0.0"
   },
