--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,12 @@
       "@/data/*": ["data/*"],
       "@/layouts/*": ["layouts/*"],
       "@/css/*": ["css/*"],
-      "contentlayer/generated": ["./.contentlayer/generated"]
+      "contentlayer/generated": ["./.contentlayer/generated"],
+      "@/types/*": ["types/*"],
+      "@/utils/*": ["utils/*"],
+      "@/servers/*": ["servers/*"],
+      "@/hooks/*": ["hooks/*"],
+      "@/constants/*": ["constants/*"]
     },
     "plugins": [
       {
