--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "remark-math": "^6.0.0",
     "swr": "^2.3.3",
     "tailwindcss": "^3.4.14",
+    "typed.js": "^2.1.0",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
